# cmd/default_/api_docs/swagger.json
@@ -22,6 +22,11 @@
     "paths": {
         "/api/health": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "health check",
                 "produces": [
                     "application/json"
@@ -65,6 +70,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
